--- a/app/src/main/res/layout/fragment_booking_step_two.xml
+++ b/app/src/main/res/layout/fragment_booking_step_two.xml
@@ -7,14 +7,14 @@ android:orientation="vertical"
 android:padding="8dp">
 
 <androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/recycler_barber"
+    android:id="@+id/recycler_Hostel"
     android:layout_marginTop="4dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
 
 <TextView
     android:id="@+id/no_item"
-    android:text="준비중입니다."
+    android:text="select area  hostel."
     android:gravity="center"
     android:visibility="gone"
     android:layout_width="match_parent"
