--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:visibility="visible"
         android:padding="8dp"
         android:background="@color/colorButton"
         android:weightSum="4"
@@ -33,19 +33,27 @@
 
             <TextView
                 android:id="@+id/txt_user_name"
-                android:text="Kim Yongdae"
+                android:text="Kim "
                 android:textColor="@android:color/white"
                 android:textSize="22sp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+            <TextView
+                android:id="@+id/txt_member_phone"
+                android:text="no"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
             <TextView
                 android:id="@+id/txt_member_type"
-                android:text="Normal"
+                android:text="reg"
                 android:textColor="@android:color/white"
                 android:textSize="16sp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+
 
         </LinearLayout>
 
@@ -171,27 +179,44 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp">
-
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
                     <ImageView
                         android:src="@drawable/ic_notifications_black_24dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_width="50dp"
+                        android:layout_gravity="left"
+                        android:layout_width="35dp"
                         android:layout_height="50dp" />
-
                     <TextView
-                        android:text="Notification"
-                        android:fontFamily="@font/bellerose"
-                        android:layout_gravity="center_horizontal"
-                        android:textSize="@dimen/textCardSize"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:id="@+id/invoice_notification"
+                        android:layout_gravity="right|end|top"
+                        android:layout_marginEnd="-5dp"
+                        android:layout_marginTop="3dp"
+                        android:background="@drawable/badge_background"
+                        android:gravity="center"
+                        android:padding="3dp"
+                        android:text="0"
+                        android:textSize="10sp"
+                        android:textColor="@android:color/white"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp" />
+
                 </LinearLayout>
 
+                <TextView
+                    android:text="Notification"
+                    android:fontFamily="@font/bellerose"
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="@dimen/textCardSize"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                </LinearLayout>
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
@@ -201,7 +226,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             app:cardCornerRadius="8dp"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -278,37 +303,37 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:text="@string/stylelist_bullet"
+                        android:text=".HOSTEL:"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
                     <TextView
                         android:id="@+id/txt_salon_barber"
-                        android:text=" David"
+                        android:text=" .Mt Kenya"
                         android:textStyle="bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+<!--                <LinearLayout-->
+<!--                    android:orientation="horizontal"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content">-->
 
-                    <TextView
-                        android:text="@string/bullet"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+<!--                    <TextView-->
+<!--                        android:text="@string/bullet"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content" />-->
 
-                    <TextView
-                        android:id="@+id/txt_time_remain"
-                        android:text=" David"
-                        android:textStyle="bold"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/txt_time_remain"-->
+<!--                        android:text=" ROOM"-->
+<!--                        android:textStyle="bold"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content" />-->
 
-                </LinearLayout>
+<!--                </LinearLayout>-->
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -365,7 +390,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical"
-                android:text="Look Book"
+                android:text=" Book"
                 android:textSize="18sp"
                 android:fontFamily="@font/bellerose"
                 android:textColor="@color/colorButton"
