--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -5,6 +5,10 @@
         android:icon="@drawable/ic_home_24dp"
         android:title="@string/home" />
     <item
+        android:id="@+id/action_Recipt"
+        android:icon="@drawable/ic_shopping_cart_24dp"
+        android:title="Recipt" />
+    <item
         android:id="@+id/action_shopping"
         android:icon="@drawable/ic_shopping_cart_24dp"
         android:title="@string/shopping" />
