--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -25,16 +25,31 @@
         android:background="@color/colorButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+    <EditText
 
-        <TextView
-            android:id="@+id/txt_total_price"
-            android:text="Ksh 0"
-            android:textSize="30sp"
-            android:textColor="@android:color/white"
-            android:layout_centerVertical="true"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        android:text="Ksh "
+        android:enabled="false"
+        android:textSize="30sp"
+        android:textColor="@android:color/white"
+        android:layout_centerVertical="true"
+        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <EditText
+        android:id="@+id/txt_total_price"
+        android:enabled="false"
+        android:textSize="30sp"
+        android:textColor="@android:color/white"
+        android:layout_centerVertical="true"
+        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</LinearLayout>
+
 
         <Button
             android:id="@+id/btn_clear_cart"
