--- a/app/src/main/res/layout/layout_hostel.xml
+++ b/app/src/main/res/layout/layout_hostel.xml
@@ -2,10 +2,12 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/card_barber"
-    app:cardCornerRadius="4dp">
+    app:cardCornerRadius="4dp"
+    tools:ignore="MissingDefaultResource">
 
     <LinearLayout
         android:padding="16dp"
@@ -15,15 +17,15 @@
 
         <ImageView
             android:id="@+id/txt_barber_image"
-            android:src="@drawable/ic_account_circle_black_24dp"
+            android:src="@drawable/ic_home_black_24dp"
             android:nextFocusForward="@font/bellerose"
             android:layout_gravity="center_horizontal"
             android:layout_width="90dp"
             android:layout_height="90dp" />
 
         <TextView
-            android:id="@+id/txt_barber_name"
-            android:text="David"
+            android:id="@+id/hostel_name"
+            android:text="Mt KENYA"
             android:textSize="20sp"
             android:textStyle="bold"
             android:fontFamily="@font/bellerose"
@@ -32,7 +34,7 @@
             android:layout_height="wrap_content" />
 
         <RatingBar
-            android:id="@+id/rtb_barber"
+            android:id="@+id/rtb_hostel"
             android:max="5"
             style="@style/Base.Widget.AppCompat.RatingBar.Small"
             android:layout_gravity="center_horizontal"
