--- a/app/src/main/res/layout/layout_hostelarea.xml
+++ b/app/src/main/res/layout/layout_hostelarea.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/card_salon"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="4dp">
+    app:cardCornerRadius="4dp"
+    tools:ignore="MissingDefaultResource">
 
     <LinearLayout
         android:padding="16dp"
