--- a/app/src/main/res/layout/layout_rating_dialog.xml
+++ b/app/src/main/res/layout/layout_rating_dialog.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/txt_barber_name"
+        android:id="@+id/txt_hostel_name"
         android:text="BARBER NAME"
         android:textSize="20sp"
         android:textStyle="bold"
